--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <div class="container-fluid pt-4 ps-4 pe-3">
-      <p class="h1">Adopta una adorable mascota</p>
+      <p class="h2 fw-bold">Adopta una adorable mascota</p>
       <p class="mt-4"> Categoría de mascotas</p>
       <div class="justify-content-center">
         <ul class="nav nav-pills mb-3 " id="pills-tab" role="tablist">
@@ -54,16 +54,16 @@
     <div>
       <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
-          <a class="col-sm-2 navbar-brand nav-link active" href="#">
+          <a class="fs-6 col navbar-brand nav-link active" href="#">
             <i id="txt" class="bi bi-house-door"></i> Inicio
           </a>
-          <a class="col-sm-2 navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="#">
             <i id="txt" class="bi bi-chat"></i>
           </a>
-          <a class="col-sm-2 navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="#">
             <i id="txt" class="bi bi-heart"></i>
           </a>
-          <a class="col-sm-2 navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="#">
             <i id="txt" class="bi bi-person"></i>
           </a>
         </div>
