--- a/info.html
+++ b/info.html
@@ -10,30 +10,92 @@
 </head>
 
 <body>
-    <main></main>
-    <div class="card bg-dark text-white">
-        <img class="img-fluid" src="images/rocky-banner.png" class="card-img" alt="rocky">
-        <div class="card-img-overlay">
-            <a href="/index.html"><img class="img-fluid" src="images/back.png"></a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="col-2">Rocky</h5>
-                    <img class="img-fluid" src="/images/female.png" alt="">
-
-                </div>
+    <main>
+        <div class="card bg-dark text-white">
+            <img src="images/rocky-banner.png" class="card-img">
+            <div class="card-img-overlay">
+                <a href="index.html"><img src="images/back.png"></a>
             </div>
         </div>
+        <section class="container bg-light rounded p-4">
+            <div class="container">
+                <div class="row ">
+                    <div class="col ">
+                        <h2 class="fw-bold">Rocky <img src="images/female.png"></h5>
+                    </div>
+                    <div class="col ">
+                        <!--img id="fav" src="/images/fav.png" alt=""-->
+                    </div>
+                </div>
+                <div class="container mt-4">
+                    <div class="row">
+                        <div class="col ">
+                            <p class=""><img src="images/raza.png">Rotweiler </p>
+                        </div>
+                        <div class="col ">
+                            <p><img id="fav" src="/images/edadprro.png" alt="">3 Meses</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container mt-4">
+                    <div class="row">
+                        <div class="col-1 ">
+                            <img class="col" src="images/map.png">
+                        </div>
+                        <div class="col">
+                            <p class="">4140 Parker Rd. Allentown, <br>New Mexico 31134 </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row  mt-4">
+                    <div class="col ">
+                        <h5 class="fw-bold">Personalidad</h5>
+                    </div>
+                </div>
+                <div class="row  mt-4">
+ 
+                    <div class="col-4 ">
+                        <img src="images/tierno.png">
+                    </div>
+                    <div class="col-4 ">
+                        <img id="fav" src="/images/inquieto.png" alt="">
+                    </div>
+                    <div class="col-4 ">
+                        <img id="fav" src="/images/Frame 6.png" alt="">
+                    </div>
+                </div>
+                <div class="row  mt-4">
+                    <div class="col ">
+                        <h5 class="fw-bold">Historia</h5>
+                    </div>
+                </div>
+                <div class="row  mt-1">
+                    <div class="col ">
+                        <p>Rocky es un perrito muy lindo y cariñoso,
+                         tiene 5 hermanitos más y por cuestiones de espacio y tiempo no podremos cuidar a todos,
+                         nuestra misión es encontrar la familia ideal para él y seguro que tú eres la persona indicada.
+                        </p>
+                    </div>
+                </div>
+                <div class="row  mt-4">
+                    <div class="col-3 ">
+                        <img class="col img-fluid" src="images/duena.png">
+                    </div>
+                    <div class="col-5">
+                        <p class="">Publicado por, <br><strong>Maria Dolores</strong></p>
+                    </div>
+                    <div class="col-4">
+                        <button type="button" class="btn btn-primary rounded-pill mt-2">Contactar</button>
+                    </div>
+                </div>
 
-        </main>
+
+        </section>
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-
 <script src="/scripts/main.js"></script>
 
 </html>
