Cambios - Js/info

--- a/fav.html
+++ b/fav.html
@@ -28,16 +28,16 @@
     <div>
       <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="/home.html">
             <i id="txt" class="bi bi-house-door"></i> 
           </a>
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="/message.html">
             <i id="txt" class="bi bi-chat"></i>
           </a>
           <a class="fs-6 col navbar-brand nav-link active" href="#">
             <i id="txt" class="bi bi-heart"></i> Favoritos
           </a>
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="profile.html">
             <i id="txt" class="bi bi-person"></i>
           </a>
         </div>
@@ -47,5 +47,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="/scripts/main.js"></script>
+<script type="module" src="./main.js"></script>
 </html>
