--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
                 <h6>Maria Dolores</h6>
             </div>
             <div class="card-img-overlay">
-                <img src="/images/back.png" alt="">
+                <a href="/message.html"><img src="/images/back.png" alt=""></a>
             </div>
           </div>
         <div class="container-fluid d-flex justify-content-center">
@@ -41,6 +41,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script src="/scripts/main.js"></script>
+<script type="module" src="./main.js"></script>
 
 </html>
