--- a/home.html
+++ b/home.html
@@ -57,13 +57,13 @@
           <a class="fs-6 col navbar-brand nav-link active" href="#">
             <i id="txt" class="bi bi-house-door"></i> Inicio
           </a>
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="/message.html">
             <i id="txt" class="bi bi-chat"></i>
           </a>
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="/fav.html">
             <i id="txt" class="bi bi-heart"></i>
           </a>
-          <a class="col navbar-brand nav-link" href="#">
+          <a class="col navbar-brand nav-link" href="/profile.html">
             <i id="txt" class="bi bi-person"></i>
           </a>
         </div>
@@ -74,7 +74,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-<script src="/scripts/main.js"></script>
+  <script type="module" src="./main.js"></script>
 
 </html>
 
