--- a/info.html
+++ b/info.html
@@ -12,16 +12,16 @@
 <body>
     <main>
         <div class="card bg-dark text-white">
-            <img src="images/rocky-banner.png" class="card-img">
+            <img id="pic" src="" class="card-img">
             <div class="card-img-overlay">
-                <a href="index.html"><img src="images/back.png"></a>
+                <a href="home.html"><img src="images/back.png"></a>
             </div>
         </div>
         <section class="container bg-light rounded p-4">
             <div class="container">
                 <div class="row ">
                     <div class="col ">
-                        <h2 class="fw-bold">Rocky <img src="images/female.png"></h5>
+                        <h2 id="n-sex" class="fw-bold">Rocky <img src="images/male.png"></h5>
                     </div>
                     <div class="col ">
                         <!--img id="fav" src="/images/fav.png" alt=""-->
@@ -30,10 +30,10 @@
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col ">
-                            <p class=""><img src="images/raza.png">Rotweiler </p>
+                            <p id="raza" class=""><img src="images/raza.png">Rotweiler </p>
                         </div>
                         <div class="col ">
-                            <p><img id="fav" src="/images/edadprro.png" alt="">3 Meses</p>
+                            <p id="edad"><img id="fav" src="/images/edadprro.png" alt="">3 Meses</p>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                             <img class="col" src="images/map.png">
                         </div>
                         <div class="col">
-                            <p class="">4140 Parker Rd. Allentown, <br>New Mexico 31134 </p>
+                            <p id="dir" class="">4140 Parker Rd. Allentown, <br>New Mexico 31134 </p>
                         </div>
                     </div>
                 </div>
@@ -55,13 +55,13 @@
                 <div class="row  mt-4">
  
                     <div class="col-4 ">
-                        <img src="images/tierno.png">
+                        <img id="perso1" src="images/tierno.png">
                     </div>
                     <div class="col-4 ">
-                        <img id="fav" src="/images/inquieto.png" alt="">
+                        <img id="perso2" src="/images/inquieto.png" alt="">
                     </div>
                     <div class="col-4 ">
-                        <img id="fav" src="/images/Frame 6.png" alt="">
+                        <img id="perso3" src="/images/jugueton.png" alt="">
                     </div>
                 </div>
                 <div class="row  mt-4">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row  mt-1">
                     <div class="col ">
-                        <p>Rocky es un perrito muy lindo y cariñoso,
+                        <p id="historia">Rocky es un perrito muy lindo y cariñoso,
                          tiene 5 hermanitos más y por cuestiones de espacio y tiempo no podremos cuidar a todos,
                          nuestra misión es encontrar la familia ideal para él y seguro que tú eres la persona indicada.
                         </p>
@@ -95,7 +95,8 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
-<script src="/scripts/main.js"></script>
+    crossorigin="anonymous">
+</script>
+<script type="module" src="./main.js"></script>
 
 </html>
