--- a/message.html
+++ b/message.html
@@ -15,13 +15,13 @@
     <main>
         <div class="container-fluid pt-4 ps-4 pe-3">
             <p class="h1 fw-bold">Mensajes</p>
-            <div class="container mt-4 bg-light rounded">
+        <div class="container mt-4 bg-light rounded">
                 <div class="row pt-3">
                     <div class="col-2 mt-2 ">
-                        <img class="col" src="images/duena.png">
+                        <a href="/chat.html"><img class="col" src="images/duena.png"></a>
                     </div>
                     <div class="col ms-2">
-                        <p class="fs-6"><strong>Maria Dolores</strong> <br> ¡Hola! claro, podemos acordar un lugar y hora para que conoscas... </p>
+                        <a href="/chat.html" style="text-decoration: none; color: black;"><p class="fs-6"><strong>Maria Dolores</strong> <br> ¡Hola! claro, podemos acordar un lugar y hora para que conoscas... </p></a>
                     </div>
                     <div class="col-2 mt-3">
                         <a href="/chat.html"><img class="col" src="images/arrow.png"></a>
@@ -36,16 +36,16 @@
         <div>
             <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
                 <div class="container-md justify-content-center text-center">
-                    <a class="col navbar-brand nav-link" href="#">
+                    <a class="col navbar-brand nav-link" href="/home.html">
                         <i id="txt" class="bi bi-house-door"></i>
                     </a>
                     <a class="col fs-6 navbar-brand nav-link active" href="#">
                         <i id="txt" class="bi bi-chat"></i> Mensajes
                     </a>
-                    <a class="col navbar-brand nav-link " href="#">
+                    <a class="col navbar-brand nav-link " href="/fav.html">
                         <i id="txt" class="bi bi-heart"></i>
                     </a>
-                    <a class="col navbar-brand nav-link" href="#">
+                    <a class="col navbar-brand nav-link" href="/profile.html">
                         <i id="txt" class="bi bi-person"></i>
                     </a>
                 </div>
@@ -56,6 +56,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script src="/scripts/main.js"></script>
+<script type="module" src="./main.js"></script>
 
 </html>
