--- a/chat.html
+++ b/chat.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    
 </head>
 
-<body>
+<body id="test">
 
     <main>
-        <div class="bg-light">
+        <div class="bg-light fixed-top">
             <div class="text-center pt-4 pb-4">
                 <img style="width: 4rem; height: 4rem;" src="images/duena.png" alt="">
                 <h6>Maria Dolores</h6>
@@ -22,25 +22,42 @@
             <div class="card-img-overlay">
                 <a href="/message.html"><img src="/images/back.png" alt=""></a>
             </div>
-          </div>
+        </div>
         <div class="container-fluid d-flex justify-content-center">
 
         </div>
     </main>
+    <section id="chat" class="container" style="padding-top: 150px;">
+        <!--div id="me" class="me">
+            <div class="message-me">
+           
+                <p>¡Hola! Me encantaria Adoptar a Rocky.S</p>
+                <p class="text-end h6">4:00 PM</p>
+            </div>
+        </div>
+        <div id="you" class="you">
+            <div class="message-you">
+                <p>Hola Buen Dia, en que horario podriamos encontrarnos?</p>
+                <p class="text-star h6">6:00 PM</p>
+            </div>
+        </div-->
+    </section>
 
     <section>
-        <div>
+        <div class="container">
             <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light">
                 <div class="container-md justify-content-center text-center">
-                    <input class="form-control" type="text" placeholder="Aa" aria-label="chat">
+                    <form id="form" class="container-fluid">
+                            <input type="text" id="message" class="form-control" placeholder="Aa" autocomplete="off" >
+                    </form>
                 </div>
             </nav>
         </div>
     </section>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
-<script type="module" src="./main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<script type="" src="./scripts/chat.js"></script>
 
 </html>
