--- a/fav.html
+++ b/fav.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<body>
-  <main>
-    <div class="container-fluid pt-4 ps-4 pe-3">
+<body >
+  <main id="test">
+    <div id="test" class="container pt-4 ps-4 pe-3">
       <p class="h1 fw-bold">Mascotas Favoritas</p>
-      <div class="justify-content-center mt-4">
-        <img src="images/chester.png">
-        <img src="images/papi.png">
-        <img src="images/rocky.png">
-        <img src="images/pelusa.png">
+      <div class="text-center mt-4" id="fav-container">
+        <!--img class="img-fluid" src="images/chester.png">
+        <img class="img-fluid mt-4" src="images/papi.png">
+        <img class="img-fluid " src="images/rocky.png">
+        <img class="img-fluid mt-4" src="images/pelusa.png"-->
       </div>
+
     </div>
   </main>
 
@@ -34,7 +34,7 @@
           <a class="col navbar-brand nav-link" href="/message.html">
             <i id="txt" class="bi bi-chat"></i>
           </a>
-          <a class="fs-6 col navbar-brand nav-link active" href="#">
+          <a class="fs-6 col navbar-brand nav-link rounded-pill active" id="active" href="#">
             <i id="txt" class="bi bi-heart"></i> Favoritos
           </a>
           <a class="col navbar-brand nav-link" href="profile.html">
@@ -47,5 +47,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script type="module" src="./main.js"></script>
+<script src="./scripts/fav.js"></script>
+<script src="/scripts/navbar.js"></script>
+
 </html>
