--- a/info.html
+++ b/info.html
@@ -6,41 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<body>
-    <main>
-        <div class="card bg-dark text-white">
+<body >
+    <main id="pruebas">
+        <div id="move1" class="card bg-light text-white">
             <img id="pic" src="" class="card-img">
             <div class="card-img-overlay">
-                <a href="home.html"><img src="images/back.png"></a>
+                <a href="./home.html"><img src="./images/back.png"></a>
             </div>
         </div>
-        <section class="container bg-light rounded p-4">
+        <section id="move2" class="container bg-light rounded p-4">
             <div class="container">
                 <div class="row ">
                     <div class="col ">
-                        <h2 id="n-sex" class="fw-bold">Rocky <img src="images/male.png"></h5>
+                        <h2 id="n-sex" class="fw-bold">Rocky <img src="./images/male.png"></h5>
                     </div>
                     <div class="col ">
-                        <!--img id="fav" src="/images/fav.png" alt=""-->
+                        <img id="fav" class="rounded float-end" style="max-width: 55px; min-width: 55px;"
+                            src="./images/fav.png">
                     </div>
                 </div>
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col ">
-                            <p id="raza" class=""><img src="images/raza.png">Rotweiler </p>
+                            <p id="raza" class=""><img src="./images/raza.png">Rotweiler </p>
                         </div>
                         <div class="col ">
-                            <p id="edad"><img id="fav" src="/images/edadprro.png" alt="">3 Meses</p>
+                            <p id="edad"><img src="./images/edadprro.png" alt="">3 Meses</p>
                         </div>
                     </div>
                 </div>
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col-1 ">
-                            <img class="col" src="images/map.png">
+                            <img class="col" src="./images/map.png">
                         </div>
                         <div class="col">
                             <p id="dir" class="">4140 Parker Rd. Allentown, <br>New Mexico 31134 </p>
@@ -53,15 +54,15 @@
                     </div>
                 </div>
                 <div class="row  mt-4">
- 
+
                     <div class="col-4 ">
-                        <img id="perso1" src="images/tierno.png">
+                        <img id="perso1" src="./images/tierno.png">
                     </div>
                     <div class="col-4 ">
-                        <img id="perso2" src="/images/inquieto.png" alt="">
+                        <img id="perso2" src="./images/inquieto.png">
                     </div>
                     <div class="col-4 ">
-                        <img id="perso3" src="/images/jugueton.png" alt="">
+                        <img id="perso3" src="./images/jugueton.png">
                     </div>
                 </div>
                 <div class="row  mt-4">
@@ -72,20 +73,21 @@
                 <div class="row  mt-1">
                     <div class="col ">
                         <p id="historia">Rocky es un perrito muy lindo y cariñoso,
-                         tiene 5 hermanitos más y por cuestiones de espacio y tiempo no podremos cuidar a todos,
-                         nuestra misión es encontrar la familia ideal para él y seguro que tú eres la persona indicada.
+                            tiene 5 hermanitos más y por cuestiones de espacio y tiempo no podremos cuidar a todos,
+                            nuestra misión es encontrar la familia ideal para él y seguro que tú eres la persona
+                            indicada.
                         </p>
                     </div>
                 </div>
                 <div class="row  mt-4">
                     <div class="col-3 ">
-                        <img class="col img-fluid" src="images/duena.png">
+                        <img class="col img-fluid" src="./images/duena.png">
                     </div>
                     <div class="col-5">
                         <p class="">Publicado por, <br><strong>Maria Dolores</strong></p>
                     </div>
                     <div class="col-4">
-                        <button type="button" class="btn btn-primary rounded-pill mt-2">Contactar</button>
+                        <a class="btn rounded-pill mt-2" id="active" href="./chat.html ">Contactar</a>
                     </div>
                 </div>
 
@@ -94,9 +96,11 @@
     </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous">
-</script>
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+    </script>
+<script src="/socket.io/socket.io.js" charset="utf-8"></script>
 <script type="module" src="./main.js"></script>
+<script src="/scripts/navbar.js"></script>
+
 
 </html>
