--- a/message.html
+++ b/message.html
@@ -5,26 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<body>
-    <main>
+<body >
+    <main id="test">
         <div class="container-fluid pt-4 ps-4 pe-3">
             <p class="h1 fw-bold">Mensajes</p>
         <div class="container mt-4 bg-light rounded">
                 <div class="row pt-3">
                     <div class="col-2 mt-2 ">
-                        <a href="/chat.html"><img class="col" src="images/duena.png"></a>
+                        <a href="./chat.html"><img class="col" src="./images/duena.png"></a>
                     </div>
                     <div class="col ms-2">
-                        <a href="/chat.html" style="text-decoration: none; color: black;"><p class="fs-6"><strong>Maria Dolores</strong> <br> ¡Hola! claro, podemos acordar un lugar y hora para que conoscas... </p></a>
+                        <a href="./chat.html" style="text-decoration: none; color: black;"><p id="text" class="fs-6"><strong>Maria Dolores</strong> <br> ¡Hola! claro, podemos acordar un lugar y hora para que conoscas... </p></a>
                     </div>
                     <div class="col-2 mt-3">
-                        <a href="/chat.html"><img class="col" src="images/arrow.png"></a>
+                        <a href="./chat.html"><img class="col" src="./images/arrow.png"></a>
                     </div>
                 </div>
             </div>
@@ -36,16 +35,16 @@
         <div>
             <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
                 <div class="container-md justify-content-center text-center">
-                    <a class="col navbar-brand nav-link" href="/home.html">
+                    <a class="col navbar-brand nav-link" href="./home.html">
                         <i id="txt" class="bi bi-house-door"></i>
                     </a>
-                    <a class="col fs-6 navbar-brand nav-link active" href="#">
+                    <a class="col fs-6 navbar-brand nav-link rounded-pill active" id="active" href="#">
                         <i id="txt" class="bi bi-chat"></i> Mensajes
                     </a>
-                    <a class="col navbar-brand nav-link " href="/fav.html">
+                    <a class="col navbar-brand nav-link " href="./fav.html">
                         <i id="txt" class="bi bi-heart"></i>
                     </a>
-                    <a class="col navbar-brand nav-link" href="/profile.html">
+                    <a class="col navbar-brand nav-link" href="./profile.html">
                         <i id="txt" class="bi bi-person"></i>
                     </a>
                 </div>
@@ -56,6 +55,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script type="module" src="./main.js"></script>
+<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+<script src="./scripts/messages.js"></script>
+<script src="/scripts/navbar.js"></script>
 
 </html>
