--- a/profile.html
+++ b/profile.html
@@ -8,36 +8,55 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<body>
-  <main>
-    <div class="container-fluid pt-4 ps-4 pe-3">
-      <p class="h1 fw-bold">Mascotas Favoritas</p>
-      <div class="justify-content-center mt-4">
-        <img src="images/chester.png">
-        <img src="images/papi.png">
-        <img src="images/rocky.png">
-        <img src="images/pelusa.png">
-      </div>
+<body onload="onload()">
+  <main id="test">
+    <h1 class="fw-bold pt-4 ps-4">Perfil</h1>
+    <div class="container-sm text-center mt-4">
+      <img src="./images/hombre.png" alt="">
+      <h5 id="act-nombre" class="p-2">Juan Méndez</h5>
+      <h6 class="fw-bold">Editar Cuenta</h6>
     </div>
+
+    <div class="container-sm p-4">
+      <form>
+      <div class="mb-3 ">
+        <label for="nombre" class="form-label m-1">Nombre</label>
+        <input type="text" class="form-control" id="f-name" value="" autocomplete="off" required>
+      </div>
+      <div class="mb-3 ">
+        <label for="apellido" class="form-label m-1">Apellido</label>
+        <input type="text" class="form-control" id="f-lastname" value="" autocomplete="off" required>
+      </div>
+      <div class="mb-3 ">
+        <label for="email" class="form-label m-1" >Correo</label>
+        <input type="email" class="form-control" id="email" value="" autocomplete="off" required>
+      </div>
+      <div id="boton" class="d-grid gap-2 text-center pt-2">
+        <button id="save" class="btn rounded-pill save" type="submit">Guardar</button>
+      </div>
+    </form>
+
+    </div>
+
   </main>
 
   <section>
     <div>
       <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
-          <a class="col navbar-brand nav-link" href="/home.html">
-            <i id="txt" class="bi bi-house-door"></i> 
+          <a class="col navbar-brand nav-link" href="./home.html">
+            <i id="txt" class="bi bi-house-door"></i>
           </a>
-          <a class="col navbar-brand nav-link" href="/message.html">
+          <a class="col navbar-brand nav-link" href="./message.html">
             <i id="txt" class="bi bi-chat"></i>
           </a>
-          <a class=" col navbar-brand nav-link" href="/fav.html">
+          <a class=" col navbar-brand nav-link" href="./fav.html">
             <i id="txt" class="bi bi-heart"></i>
           </a>
-          <a class="fs-6 col navbar-brand nav-link active " href="#">
+          <a class="fs-6 col navbar-brand nav-link active rounded-pill active" id="active" href="#">
             <i id="txt" class="bi bi-person"></i> Perfil
           </a>
         </div>
@@ -47,5 +66,9 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script type="module" src="./main.js"></script>
+<script src="/socket.io/socket.io.js" charset="utf-8"></script>
+
+<script src="./scripts/profile.js"></script>
+<script src="/scripts/navbar.js"></script>
+
 </html>
