--- a/info.html
+++ b/info.html
@@ -14,34 +14,34 @@
         <div id="move1" class="card bg-light text-white">
             <img id="pic" src="" class="card-img">
             <div class="card-img-overlay">
-                <a href="./home.html"><img src="./images/back.png"></a>
+                <a id="back-url" href="./home.html"><img src="https://i.imgur.com/HDGs7pN.png"></a>
             </div>
         </div>
         <section id="move2" class="container bg-light rounded p-4">
             <div class="container">
                 <div class="row ">
                     <div class="col ">
-                        <h2 id="n-sex" class="fw-bold">Rocky <img src="./images/male.png"></h5>
+                        <h2 id="n-sex" class="fw-bold">Rocky <img src="https://i.imgur.com/V3Y7R8T.png"></h5>
                     </div>
                     <div class="col ">
                         <img id="fav" class="rounded float-end" style="max-width: 55px; min-width: 55px;"
-                            src="./images/fav.png">
+                            src="https://i.imgur.com/Xr6l0by.png">
                     </div>
                 </div>
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col ">
-                            <p id="raza" class=""><img src="./images/raza.png">Rotweiler </p>
+                            <p id="raza" class=""><img src="https://i.imgur.com/6iI3VMP.png">Rotweiler </p>
                         </div>
                         <div class="col ">
-                            <p id="edad"><img src="./images/edadprro.png" alt="">3 Meses</p>
+                            <p id="edad"><img src="https://i.imgur.com/nfDlXaH.png" alt="">3 Meses</p>
                         </div>
                     </div>
                 </div>
                 <div class="container mt-4">
                     <div class="row">
                         <div class="col-1 ">
-                            <img class="col" src="./images/map.png">
+                            <img class="col" src="https://i.imgur.com/7L2xHnf.png">
                         </div>
                         <div class="col">
                             <p id="dir" class="">4140 Parker Rd. Allentown, <br>New Mexico 31134 </p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="row  mt-4">
                     <div class="col-3 ">
-                        <img class="col img-fluid" src="./images/duena.png">
+                        <img class="col img-fluid" src="https://i.imgur.com/sIHe3J1.png">
                     </div>
                     <div class="col-5">
                         <p class="">Publicado por, <br><strong>Maria Dolores</strong></p>
@@ -100,7 +100,6 @@
     </script>
 <script src="/socket.io/socket.io.js" charset="utf-8"></script>
 <script type="module" src="./main.js"></script>
-<script src="/scripts/navbar.js"></script>
 
 
 </html>
