--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
   <main id="test">
     <h1 class="fw-bold pt-4 ps-4">Perfil</h1>
     <div class="container-sm text-center mt-4">
-      <img src="./images/hombre.png" alt="">
+      <img src="https://i.imgur.com/DQ6Eq3P.png" alt="">
       <h5 id="act-nombre" class="p-2">Juan Méndez</h5>
       <h6 class="fw-bold">Editar Cuenta</h6>
     </div>
@@ -45,7 +45,7 @@
 
   <section>
     <div>
-      <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
+      <nav id="pop" class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
           <a class="col navbar-brand nav-link" href="./home.html">
             <i id="txt" class="bi bi-house-door"></i>
