--- a/chat.html
+++ b/chat.html
@@ -11,23 +11,23 @@
     
 </head>
 
-<body id="test">
+<body >
 
     <main>
         <div class="bg-light fixed-top">
             <div class="text-center pt-4 pb-4">
-                <img style="width: 4rem; height: 4rem;" src="images/duena.png" alt="">
+                <img style="width: 4rem; height: 4rem;" src="https://i.imgur.com/sIHe3J1.png" alt="">
                 <h6>Maria Dolores</h6>
             </div>
             <div class="card-img-overlay">
-                <a href="/message.html"><img src="/images/back.png" alt=""></a>
+                <a href="/message.html"><img src="https://i.imgur.com/HDGs7pN.png" alt=""></a>
             </div>
         </div>
         <div class="container-fluid d-flex justify-content-center">
 
         </div>
     </main>
-    <section id="chat" class="container" style="padding-top: 150px;">
+    <section id="chat" class="container" style="padding-top: 150px; padding-bottom: 70px;">
         <!--div id="me" class="me">
             <div class="message-me">
            
