--- a/fav.html
+++ b/fav.html
@@ -11,7 +11,7 @@
 </head>
 
 <body >
-  <main id="test">
+  <main >
     <div id="test" class="container pt-4 ps-4 pe-3">
       <p class="h1 fw-bold">Mascotas Favoritas</p>
       <div class="text-center mt-4" id="fav-container">
@@ -26,7 +26,7 @@
 
   <section>
     <div>
-      <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
+      <nav id="pop" class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
         <div class="container-md justify-content-center text-center">
           <a class="col navbar-brand nav-link" href="/home.html">
             <i id="txt" class="bi bi-house-door"></i> 
@@ -48,6 +48,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="./scripts/fav.js"></script>
-<script src="/scripts/navbar.js"></script>
+<script type="module" src="/scripts/navbar.js"></script>
 
 </html>
