--- a/message.html
+++ b/message.html
@@ -17,13 +17,13 @@
         <div class="container mt-4 bg-light rounded">
                 <div class="row pt-3">
                     <div class="col-2 mt-2 ">
-                        <a href="./chat.html"><img class="col" src="./images/duena.png"></a>
+                        <a href="./chat.html"><img class="col" src="https://i.imgur.com/sIHe3J1.png"></a>
                     </div>
                     <div class="col ms-2">
                         <a href="./chat.html" style="text-decoration: none; color: black;"><p id="text" class="fs-6"><strong>Maria Dolores</strong> <br> ¡Hola! claro, podemos acordar un lugar y hora para que conoscas... </p></a>
                     </div>
                     <div class="col-2 mt-3">
-                        <a href="./chat.html"><img class="col" src="./images/arrow.png"></a>
+                        <a href="./chat.html"><img class="col" src="https://i.imgur.com/qJrGNwY.png"></a>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
 
     <section>
         <div>
-            <nav class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
+            <nav id="pop" class="navbar nav-pills fixed-bottom navbar-expand-lg navbar-light bg-light">
                 <div class="container-md justify-content-center text-center">
                     <a class="col navbar-brand nav-link" href="./home.html">
                         <i id="txt" class="bi bi-house-door"></i>
