Solve Bugs 1.1 - GitHub Pages

--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
                 <h6>Maria Dolores</h6>
             </div>
             <div class="card-img-overlay">
-                <a href="/message.html"><img src="https://i.imgur.com/HDGs7pN.png" alt=""></a>
+                <a href="./message.html"><img src="https://i.imgur.com/HDGs7pN.png" alt=""></a>
             </div>
         </div>
         <div class="container-fluid d-flex justify-content-center">
