--- a/fav.html
+++ b/fav.html
@@ -48,6 +48,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="./scripts/fav.js"></script>
-<script type="module" src="/scripts/navbar.js"></script>
+<script type="module" src="./scripts/navbar.js"></script>
 
 </html>
