--- a/message.html
+++ b/message.html
@@ -57,6 +57,6 @@
     crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js" charset="utf-8"></script>
 <script src="./scripts/messages.js"></script>
-<script src="/scripts/navbar.js"></script>
+<script src="./scripts/navbar.js"></script>
 
 </html>
