--- a/profile.html
+++ b/profile.html
@@ -69,6 +69,6 @@
 <script src="/socket.io/socket.io.js" charset="utf-8"></script>
 
 <script src="./scripts/profile.js"></script>
-<script src="/scripts/navbar.js"></script>
+<script src="./scripts/navbar.js"></script>
 
 </html>
